5.1.1
	+ Do not try to validate path if not changed
	+ Do not enable ScanOnAccess option if no paths are defined
	+ Remove obsolete code
5.1
	+ On-Access Scanning for Commercial editions
	+ Remove deprecated purge-module script
5.0.2
	+ Fix dashboard running state false negative
5.0.1
	+ Do not force execution of freshclam after restart as it takes
	  a very long time to timeout when connection is not successful
5.0
	+ Run freshclam daily instead of hourly
4.2
	+ Update version to 4.2
4.1
	+ Fix start of clamd that could take up to one hour to start working
	+ Modify apparmor local profile for freshclam to add /proc/*/status
4.0.1
	+ Force samba conf rewrite and restart in purge-module if AV is enabled
4.0
	+ Adapt firewall to reduce on remoteservices module
	+ Set version to 4.0
3.5
	+ Set version to 3.5
	+ Disabled Ubuntu freshclam daemon
	+ Added clamd socket actions to freshclam apparmor profile
3.4
	+ Set version to 3.4
	+ Make FreshclamStatus model more resilient to errors
	+ Fix status when the freshclam state file is empty
3.3
	+ Update strings to new offering
	+ Added missing EBox::Exceptions uses
	+ Delete migration code from old versions
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.2
	+ Override daemons when migrating from 3.0
3.1.1
	+ Added menu icon
	+ Adapt firewall rules to new accept chains
3.1
	+ Added LogHelper for storing AV DB updates in the DB
	+ Disable outdated script hook as it is not shown in the UI
	+ Make freshclam-observer work again
	+ Depend on zentyal-core 3.1
3.0.1
	+ Enhanced way of getting signatures form logs: alternative log
	  line supported and dates checked
3.0
	+ Reviewed registration strings
2.3.4
	+ Removed unused report code
2.3.3
	+ Antivirus is now under Office instead of UTM
2.3.2
	+ Adapted to new Model management framework
	+ Use freshclam log file to find update events
2.3.1
	+ More robust signature count
	+ Adapted messages in the UI for new editions
2.3
	+ Replaced autotools with zbuildtools
2.1.4