@@ -1,3 +1,5 @@
+HEAD
+	+ Display last database update events from freshclam.log
 5.1.1
 	+ Do not try to validate path if not changed
 	+ Do not enable ScanOnAccess option if no paths are defined
